refactor: 移除 JWT 认证，完全切换至 Session/Cookie 模式
- 删除 JwtAuthenticationFilter.java 和 JwtService.java
- 清理 pom.xml 中 jjwt-api/impl/jackson 依赖
- 清理 application.yml 中 jwt.*配置项
- 更新 ApiKeyController 移除 JwtService 引用
- 更新 ai-context 文档：security.md, index.md, service.md